--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,16 @@
 				<a href="caddias" class="btn btn-lg btn-primary">Cadastro de
 					Dias</a>
 			</div>
+			<hr />
+			<div align="center">
+				<a href="cadcursos" class="btn btn-lg btn-primary">Cadastro de
+					Cursos</a>
+			</div>
+			<hr />
+			<div align="center">
+				<a href="cadprodutos" class="btn btn-lg btn-primary">Cadastro de
+					Produtos</a>
+			</div>
 		</div>
 	</div>
 	<script
