Iniciando a editar o Cadastro de Alunos

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,21 @@
 				<a href="cadprodutos" class="btn btn-lg btn-primary">Cadastro de
 					Produtos</a>
 			</div>
+			<hr />
+			<div align="center">
+				<a href="cadsexos" class="btn btn-lg btn-primary">Cadastro de
+					Sexos</a>
+			</div>
+			<hr />
+			<div align="center">
+				<a href="cadreligiao" class="btn btn-lg btn-primary">Cadastro de
+					Religiões</a>
+			</div>
+			<hr />
+			<div align="center">
+				<a href="cadetipofiliacao" class="btn btn-lg btn-primary">Cadastro de
+					Tipos de Filiação</a>
+			</div>
 		</div>
 	</div>
 	<script
