--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,6 +53,11 @@
 				<a href="cadetipofiliacao" class="btn btn-lg btn-primary">Cadastro de
 					Tipos de Filiação</a>
 			</div>
+			<hr />
+			<div align="center">
+				<a href="cadalunos" class="btn btn-lg btn-primary">Cadastro de
+					Alunos</a>
+			</div>
 		</div>
 	</div>
 	<script
